<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PersonalInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info"
            android:id="@+id/label"
            />

        <ScrollView
            android:layout_marginTop="5dp"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.material.card.MaterialCardView
                app:cardElevation="0dp"
                app:cardBackgroundColor="#ffffff"
                app:layout_constraintTop_toBottomOf="@+id/registerAppBar"
                app:layout_constraintHeight_default="spread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/mName_TIL"
                        android:hint="@string/first_name"
                        app:errorEnabled="true"
                        android:id="@+id/fName_TIL" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableEnd="@drawable/person"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/fName_Et"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintTop_toBottomOf="@+id/fName_TIL"
                        android:hint="@string/middle_name"
                        app:errorEnabled="true"
                        android:id="@+id/mName_TIL" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableEnd="@drawable/person"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/mName_Et"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintTop_toBottomOf="@+id/mName_TIL"
                        android:hint="@string/last_name"
                        app:errorEnabled="true"
                        android:id="@+id/lName_TIL" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableEnd="@drawable/person"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lName_Et"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintTop_toBottomOf="@+id/lName_TIL"
                        android:hint="@string/email"
                        app:errorEnabled="true"
                        android:id="@+id/email_TIL" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableEnd="@drawable/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/email_Et"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginEnd="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth"
                        app:errorEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintTop_toBottomOf="@+id/email_TIL"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/phone_TIL"
                        android:id="@+id/dateOfBirth_TIL">
                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableEnd="@drawable/calendar"
                            android:text="dd / mm / yy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/dateOfBirth_ET"
                            android:inputType="date" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginStart="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        app:errorEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintTop_toBottomOf="@+id/email_TIL"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/dateOfBirth_TIL"
                        android:id="@+id/phone_TIL">
                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableEnd="@drawable/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/phone_ET"
                            android:maxLength="10"
                            android:inputType="date" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/genderLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth_TIL"
                        android:fontFamily="@font/roboto"
                        android:text="@string/gender" />
                    <RadioGroup
                        android:id="@+id/genderGroup"
                        app:layout_constraintStart_toStartOf="@+id/email_TIL"
                        app:layout_constraintTop_toBottomOf="@+id/genderLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:checked="true"
                            android:id="@+id/maleRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />
                        <RadioButton
                            android:id="@+id/femaleRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female" />
                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintTop_toBottomOf="@+id/genderGroup"
                        android:hint="@string/residence"
                        app:errorEnabled="true"
                        android:id="@+id/residence_TIL" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableEnd="@drawable/home"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/residence_ET"
                            android:inputType="textPostalAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintTop_toBottomOf="@+id/residence_TIL"
                        android:hint="@string/hometown"
                        app:errorEnabled="true"
                        android:id="@+id/hometown_TIL" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableEnd="@drawable/map"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/hometown_ET"
                            android:inputType="textPostalAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintTop_toBottomOf="@+id/hometown_TIL"
                        android:hint="@string/occupation"
                        app:errorEnabled="true"
                        android:id="@+id/occupation_TIL" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableEnd="@drawable/work"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/occupation_ET"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:icon="@drawable/go_right"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/nextButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>